# multiagenttest

./: .gitignore  AGENT_HANDOFF.md  BATCH_ISSUE_PREPARATION.md  CLAUDE.md  CONTRIBUTING.md  FINAL_ISSUE_PREPARATION.md  ISSUE_PREPARATION_LOG.md  LICENSE  PLANNING_SESSION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: advanced_usage.sh  basic_usage.sh  error_handling.sh
src/mathcli/: __init__.py  __main__.py  operations.py
tests/: __init__.py  test_cli.py  test_operations.py
